--- a/index.html
+++ b/index.html
@@ -6,14 +6,40 @@
     <title>Photo Nexus</title>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>   -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
      <link href="assets/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
+<style>
+  html, body {
+            height: 100%;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+        }
+        /* El contenedor principal (ej. `main`) toma todo el espacio disponible */
+        main {
+            flex: 1;
+        }
+
+        /* El footer siempre estará al final */
+        footer {
+          background-color: #3c3d62;
+          color: white;
+          padding: 20px;
+          text-align: center;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          height: 100px; 
+        }
+</style>
   <body>
+    <main>
 
     <section id="navBar">
-        <nav class="navbar bg-body-tertiary">
+        <nav class="navbar bg-body-secondary">
             <div class="container-fluid">
-              <a class="navbar-brand">Photo Nexus</a>
+              <a class="navbar-brand"><i class="bi bi-image-fill"></i> Photo Nexus</a>
               <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Photo" aria-label="Photo">
                 <button class="btn btn-outline-success" type="submit">Buscar</button>
@@ -22,7 +48,59 @@
           </nav>
 
     </section>
-    <h1>Hello, world!</h1>
+    
+    <section class="mt-3">
+      <div class="container">
+        <h3>¿Qué foto deseas agregar?</h3>
+        <div class="input-group mb-3">
+          <input type="file" class="form-control" placeholder="Imagen" aria-label="Imagen" aria-describedby="basic-addon1">
+          <span class="input-group-text" id="basic-addon1"><i class="bi bi-image-fill"></i></span>
+        </div>
+        <button class="btn btn-primary"><i class="bi bi-plus-circle-dotted"></i> Agregar</button>
+        
+      </div>
+    </section>
+    <section>
+      <div class="container">
+        <hr>
+        <h3><i class="bi bi-image-fill"></i> Imágenes agregadas</h3>
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">First</th>
+              <th scope="col">Last</th>
+              <th scope="col">Handle</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">1</th>
+              <td>Mark</td>
+              <td>Otto</td>
+              <td>@mdo</td>
+            </tr>
+            <tr>
+              <th scope="row">2</th>
+              <td>Jacob</td>
+              <td>Thornton</td>
+              <td>@fat</td>
+            </tr>
+            <tr>
+              <th scope="row">3</th>
+              <td colspan="2">Larry the Bird</td>
+              <td>@twitter</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </section>
+  </main>
+    <footer>
+      <div class="container">
+        <p class="h4 my-auto">2024 | Nexus. Todos los derechos reservados.</p>
+      </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
