--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Photo Nexus</title>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <script src="js/files.js"></script>
+
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>   -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
      <link href="assets/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -52,10 +56,15 @@
     <section class="mt-3">
       <div class="container">
         <h3>¿Qué foto deseas agregar?</h3>
-        <div class="input-group mb-3">
-          <input type="file" class="form-control" placeholder="Imagen" aria-label="Imagen" aria-describedby="basic-addon1">
-          <span class="input-group-text" id="basic-addon1"><i class="bi bi-image-fill"></i></span>
-        </div>
+        <form id="upload_form" enctype="multipart/form-data" method="post">
+          <div class="input-group mb-3">
+            <input type="file" id="file" class="form-control" placeholder="Imagen" aria-label="Imagen" aria-describedby="basic-addon1">
+            <span class="input-group-text" id="basic-addon1"><i class="bi bi-image-fill"></i></span>
+          </div>
+          <progress id="progressBar" value="0" max="100" style="width:300px;"></progress>
+          <small id="status"></small>
+          <p id="loaded_n_total"></p>
+        </form>
         <button class="btn btn-primary"><i class="bi bi-plus-circle-dotted"></i> Agregar</button>
         
       </div>
