--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
           <div class="input-group mb-3">
             <input type="file" id="file" class="form-control" placeholder="Imagen" aria-label="Imagen" aria-describedby="basic-addon1">
             <span class="input-group-text" id="basic-addon1"><i class="bi bi-image-fill"></i></span>
+            <button type="button" class="btn btn-primary" onclick="uploadFile()"><i class="bi bi-plus-circle-dotted"></i> Agregar</button>
           </div>
           <progress id="progressBar" value="0" max="100" style="width:300px;"></progress>
           <small id="status"></small>
           <p id="loaded_n_total"></p>
         </form>
-        <button class="btn btn-primary"><i class="bi bi-plus-circle-dotted"></i> Agregar</button>
         
       </div>
     </section>
@@ -77,9 +77,9 @@
           <thead>
             <tr>
               <th scope="col">#</th>
-              <th scope="col">First</th>
-              <th scope="col">Last</th>
-              <th scope="col">Handle</th>
+              <th scope="col">Archivo</th>
+              <th scope="col">Link</th>
+              <th scope="col">Acción</th>
             </tr>
           </thead>
           <tbody>
