--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <h3>¿Qué foto deseas agregar?</h3>
         <form id="upload_form" enctype="multipart/form-data" method="post">
           <div class="input-group mb-3">
-            <input type="file" id="file" class="form-control" placeholder="Imagen" aria-label="Imagen" aria-describedby="basic-addon1">
+            <input type="file" id="file" class="form-control" placeholder="Imagen" aria-label="Imagen" aria-describedby="basic-addon1" accept="image/*">
             <span class="input-group-text" id="basic-addon1"><i class="bi bi-image-fill"></i></span>
             <button type="button" class="btn btn-primary" onclick="uploadFile()"><i class="bi bi-plus-circle-dotted"></i> Agregar</button>
           </div>
